--- a/article.html
+++ b/article.html
@@ -32,46 +32,56 @@
 
   <header id="header" class="header d-flex align-items-center sticky-top">
     <div
-        class="container-fluid container-xl position-relative d-flex align-items-center"
-      >
-        <a href="index.html" class="logo d-flex align-items-center me-auto">
-          <img src="assets/img/logo-gentan.png" alt="" />
-        </a>
+      class="container-fluid container-xl position-relative d-flex align-items-center"
+    >
+      <a href="index.html" class="logo d-flex align-items-center me-auto">
+        <i class="bi bi-globe h4 m-1"></i>
+        <div class="d-flex flex-column justify-content-center">
+          <h4 class="m-1 mb-0">RKDD Gentan</h4>
+          <p class=" mt-0 baki" style="
+        
+  margin-left: 18px;
+    -webkit-transform:scale(1,1); /* Safari and Chrome */
+    -moz-transform:scale(2,1); /* Firefox */
+    -ms-transform:scale(2,1); /* IE 9 */
+    -o-transform:scale(2,1); /* Opera */
+    transform:scale(1.2,1); /* W3C */
+        ">Kecamatan Baki</p>
+        </div>
+      </a>
 
-        <nav id="navmenu" class="navmenu">
-          <ul>
-            <li><a href="/index.html">Home</a></li>
-            <li><a href="/tentang-page.html">Tentang</a></li>
-            <li class="dropdown">
-              <a href="#services"
-                ><span>Layanan</span>
-                <i class="bi bi-chevron-down toggle-dropdown"></i
-              ></a>
-              <ul>
-                <li><a href="#">Chat Tan</a></li>
-                <li><a href="/gentan-news.html">Gentan News</a></li>
-                <li><a href="/info-umkm.html">Info UMKM</a></li>
-                <li><a href="/beri-usulan.html">Beri Usulan</a></li>
-              </ul>
-            </li>
-            <li class="dropdown">
-              <a href="#footer"
-                ><span>Lain-Lain</span>
-                <i class="bi bi-chevron-down toggle-dropdown"></i
-              ></a>
-              <ul>
-                <li><a href="/data-warga-miskin.html">DTKS</a></li>
-                <li><a href="/pkh.html">PKH</a></li>
-                <li><a href="/rtlh.html">RTLH</a></li>
-                <li><a href="/stunting.html">Stunting</a></li>
-              </ul>
-            </li>
-          </ul>
-          <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
-        </nav>
-
-        <a class="btn-getstarted" href="/index.html">Get Started</a>
-      </div>
+      <nav id="navmenu" class="navmenu">
+        <ul>
+          <li><a href="/index.html">Home</a></li>
+          <li><a href="/tentang-page.html">Tentang</a></li>
+          <li class="dropdown">
+            <a href="#services"
+              ><span>Layanan</span>
+              <i class="bi bi-chevron-down toggle-dropdown"></i
+            ></a>
+            <ul>
+              <li><a href="#">Chat Tan</a></li>
+              <li><a href="/gentan-news.html">Gentan News</a></li>
+              <li><a href="/info-umkm.html">Info UMKM</a></li>
+              <li><a href="/beri-usulan.html">Beri Usulan</a></li>
+            </ul>
+          </li>
+          <li class="dropdown">
+            <a href="#footer"
+              ><span>Lain-Lain</span>
+              <i class="bi bi-chevron-down toggle-dropdown"></i
+            ></a>
+            <ul>
+              <li><a href="/data-warga-miskin.html">DTKS</a></li>
+              <li><a href="/pkh.html">PKH</a></li>
+              <li><a href="/rtlh.html">RTLH</a></li>
+              <li><a href="/stunting.html">Stunting</a></li>
+            </ul>
+          </li>
+        </ul>
+        <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
+      </nav>
+    </div>
   </header>
 
   <main class="main">
@@ -82,28 +92,28 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
-            <li class="current">Tentang</li>
+            <li class="current">Artikel</li>
           </ol>
         </nav>
-        <h1>Tentang</h1>
+        <h1>Artikel</h1>
       </div>
     </div><!-- End Page Title -->
 
      <!-- Service Details Section -->
-     <section id="service-details" class="service-details section">
+     <section id="service-details" class="service-details section" style="margin-left: 50px;">
 
       <div class="container">
 
 
-          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200">
+          <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200" style="text-align: justify;">
             <img src="assets/img/news/berangkat.jpg" alt="" class="img-fluid services-img">
             <h3>Pemberangkatan Mahasiswa Universitas Diponegoro untuk Kuliah Kerja Nyata (KKN) di Desa Gentan, Kecamatan Baki, Sukoharjo</h3>
             <p>
               Sukoharjo, (11/07/2024) – Universitas Diponegoro memberangkatkan 7.000 mahasiswa lebih untuk melaksanakan kegiatan KKN yang tersebar di daerah yaitu 10 Kabupaten dan 1 Kota, diantaranya adalah Sukoharjo, Wonogiri, Klaten, Magelang, Temanggung, Sragen, Boyolali, Batang, Pekalongan, Pemalang, dan Kota Surakarta dengan periode 45 hari.
-              Lalu, sebanyak 10 mahasiswa KKN Tim II Desa Gentan, Kecamatan Baki, Sukoharjo akan melaksanakan kegiatan mulai tanggal 11 Juli sampai dengan 20 Agustus 2024. Tim ini akan didampingi oleh Dosen Pembimbing Lapangan yaitu Muhammad Hauzan Arifin, S.Pi., M.Si. selama kegiatan KKN berlangsung.
-              Nantinya, mahasiswa akan mengerjakan program kerja monodisiplin yang dilaksanakan secara individu sebanyak 2 program, dan 2 multidisiplin yang dilaksanakan secara berkelompok sebanyak 2 program. Mahasiswa KKN juga akan mengikuti dan membantu dalam setiap kegiatan warga seperti perayaan memperingati hari jadi Kabupaten Sukoharjo, posyandu, kerja bakti, memperingati Hari Kemerdekaan Indonesia, dan lain-lain
+           </p>  <p> Lalu, sebanyak 10 mahasiswa KKN Tim II Desa Gentan, Kecamatan Baki, Sukoharjo akan melaksanakan kegiatan mulai tanggal 11 Juli sampai dengan 20 Agustus 2024. Tim ini akan didampingi oleh Dosen Pembimbing Lapangan yaitu Muhammad Hauzan Arifin, S.Pi., M.Si. selama kegiatan KKN berlangsung.
+              </p><p>Nantinya, mahasiswa akan mengerjakan program kerja monodisiplin yang dilaksanakan secara individu sebanyak 2 program, dan 2 multidisiplin yang dilaksanakan secara berkelompok sebanyak 2 program. Mahasiswa KKN juga akan mengikuti dan membantu dalam setiap kegiatan warga seperti perayaan memperingati hari jadi Kabupaten Sukoharjo, posyandu, kerja bakti, memperingati Hari Kemerdekaan Indonesia, dan lain-lain
                           </p>
-            
+            <p>Penulis: Wisnu Swastika Aji</p>
           </div>
 
         </div>
@@ -115,7 +125,6 @@
   </main>
 
   <footer id="footer" class="footer">
-
     <div class="container footer-top">
       <div class="row gy-4">
         <div class="col-lg-4 col-md-6 footer-about">
@@ -135,15 +144,20 @@
         <div class="col-lg-2 col-md-3 footer-links">
           <h4>Layanan</h4>
           <ul>
-            <li><i class="bi bi-chevron-right"></i> <a href="#">Chat Tan</a></li>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Gentan News</a>
+              <i class="bi bi-chevron-right"></i> <a href="#">Chat Tan</a>
             </li>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Info UMKM</a>
+              <i class="bi bi-chevron-right"></i>
+              <a href="/gentan-news.html">Gentan News</a>
             </li>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Data Warga Miskin</a>
+              <i class="bi bi-chevron-right"></i>
+              <a href="/info-umkm.html">Info UMKM</a>
+            </li>
+            <li>
+              <i class="bi bi-chevron-right"></i>
+              <a href="/beri-usulan.html">Beri Usulan</a>
             </li>
           </ul>
         </div>
@@ -152,11 +166,20 @@
           <h4>Lain-Lain</h4>
           <ul>
             <li>
-              <i class="bi bi-chevron-right"></i> <a href="#">Social Media</a>
+              <i class="bi bi-chevron-right"></i>
+              <a href="/data-warga-miskin.html">DTKS</a>
             </li>
             <li>
               <i class="bi bi-chevron-right"></i>
-              <a href="#">Beri Usulan</a>
+              <a href="/pkh.html">PKH</a>
+            </li>
+            <li>
+              <i class="bi bi-chevron-right"></i>
+              <a href="/rtlh.html">RTLH</a>
+            </li>
+            <li>
+              <i class="bi bi-chevron-right"></i>
+              <a href="/stunting.html">Stunting</a>
             </li>
           </ul>
         </div>
@@ -164,7 +187,8 @@
         <div class="col-lg-4 col-md-12">
           <h4>Follow Social Media Gentan</h4>
           <p>
-            Follow sosial media gentan untuk terus update mengenai kegiatan di gentan
+            Follow sosial media gentan untuk terus update mengenai kegiatan di
+            gentan
           </p>
           <div class="social-links d-flex">
             <a href=""><i class="bi bi-twitter-x"></i></a>
@@ -181,9 +205,7 @@
         © <span>Copyright</span> <strong class="px-1 sitename">2024</strong>
         <span>All Rights Reserved</span>
       </p>
-      <div class="credits">
-        Designed by KKN TIM II UNDIP 2023/2024
-      </div>
+      <div class="credits">Designed by KKN TIM II UNDIP 2023/2024</div>
     </div>
   </footer>
 
