--- a/info-umkm.html
+++ b/info-umkm.html
@@ -46,7 +46,18 @@
       >
         <a href="index.html" class="logo d-flex align-items-center me-auto">
           <i class="bi bi-globe h4 m-1"></i>
-          <h4 class="m-1">RKDD Gentan</h4>
+          <div class="d-flex flex-column justify-content-center">
+            <h4 class="m-1 mb-0">RKDD Gentan</h4>
+            <p class=" mt-0 baki" style="
+          
+    margin-left: 18px;
+      -webkit-transform:scale(1,1); /* Safari and Chrome */
+      -moz-transform:scale(2,1); /* Firefox */
+      -ms-transform:scale(2,1); /* IE 9 */
+      -o-transform:scale(2,1); /* Opera */
+      transform:scale(1.2,1); /* W3C */
+          ">Kecamatan Baki</p>
+          </div>
         </a>
 
         <nav id="navmenu" class="navmenu">
