--- a/article.html
+++ b/article.html
@@ -52,7 +52,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="/index.html">Home</a></li>
+          <li><a href="Arsha/index.html">Home</a></li>
           <li><a href="/tentang-page.html">Tentang</a></li>
           <li class="dropdown">
             <a href="#services"
@@ -92,6 +92,7 @@
         <nav class="breadcrumbs">
           <ol>
             <li><a href="index.html">Home</a></li>
+            <li><a href="/gentan-news.html">Gentan News</a></li>
             <li class="current">Artikel</li>
           </ol>
         </nav>
@@ -100,10 +101,10 @@
     </div><!-- End Page Title -->
 
      <!-- Service Details Section -->
-     <section id="service-details" class="service-details section" style="margin-left: 50px;">
+     <section id="service-details" class="service-details section" >
 
       <div class="container">
-
+<div class="row">
 
           <div class="col-lg-8" data-aos="fade-up" data-aos-delay="200" style="text-align: justify;">
             <img src="assets/img/news/berangkat.jpg" alt="" class="img-fluid services-img">
@@ -113,9 +114,63 @@
            </p>  <p> Lalu, sebanyak 10 mahasiswa KKN Tim II Desa Gentan, Kecamatan Baki, Sukoharjo akan melaksanakan kegiatan mulai tanggal 11 Juli sampai dengan 20 Agustus 2024. Tim ini akan didampingi oleh Dosen Pembimbing Lapangan yaitu Muhammad Hauzan Arifin, S.Pi., M.Si. selama kegiatan KKN berlangsung.
               </p><p>Nantinya, mahasiswa akan mengerjakan program kerja monodisiplin yang dilaksanakan secara individu sebanyak 2 program, dan 2 multidisiplin yang dilaksanakan secara berkelompok sebanyak 2 program. Mahasiswa KKN juga akan mengikuti dan membantu dalam setiap kegiatan warga seperti perayaan memperingati hari jadi Kabupaten Sukoharjo, posyandu, kerja bakti, memperingati Hari Kemerdekaan Indonesia, dan lain-lain
                           </p>
-            <p>Penulis: Wisnu Swastika Aji</p>
+                          <hr>
+                          <p class=" mt-0" style="font-size: small; font-style: italic;">Penulis: Wisnu Swastika Aji</p>
+                      </p>
+                      <p class="mt-0" style="font-size: small; font-style: italic;">Dosen pembimbing Lapangan : Muhammad Hauzan Arifin, S.Pi., M.SI.</p>
+                      <p class="mt-0" style="font-size: small; font-style: italic;">Lokasi KKN : Desa Gentan, Kecamatan Baki, Kabupaten Sukoharjo.</p>
           </div>
+ <!-- Right Sidebar with Related Articles -->
+ <div class="col-lg-4" data-aos="fade-up" data-aos-delay="400">
+  <div class="sidebar">
+    <h4 class="sidebar-title">Artikel Terkait</h4>
 
+    <div class="related-articles">
+      <div class="article-item">
+        <a href="/article.html">
+          <img
+            src="/assets/img/news/berangkat.jpg"
+            alt="Related article 1"
+            class="img-fluid"
+          />
+          <h6 class="article-title">
+            Pemberangkatan Mahasiswa Universitas Diponegoro untuk
+            Kuliah Kerja Nyata (KKN) di Desa Gentan, Kecamatan Baki,
+            Sukoharjo
+          </h6>
+        </a>
+      </div>
+      <div class="article-item">
+        <a href="/articles/artikel2.html">
+          <img
+            src="/assets/img/Picture2.jpg"
+            alt="Related article 2"
+            class="img-fluid"
+          />
+          <h6 class="article-title">
+            Mahasiswa KKN Tim II Desa Gentan Universitas Diponegoro
+            tahun 2024 melaksanakan Tiratakatan HUT Kabupaten
+            Sukoharjo bersama perangkat Desa Gentan
+          </h6>
+        </a>
+      </div>
+      <div class="article-item">
+        <a href="/articles/artikel9.html">
+          <img
+            src="/assets/img/Picture9.jpg"
+            alt="Related article 3"
+            class="img-fluid"
+          />
+          <h6 class="article-title">
+            Mahasiswa KKN Tim II Desa Gentan Universitas Diponegoro
+            tahun 2024 berkontribusi pada kegiatan pembagian beras
+            untuk masyarakat Desa Gentan
+          </h6>
+        </a>
+      </div>
+    </div>
+  </div>
+</div>
         </div>
 
       </div>
