--- a/gentan-news.html
+++ b/gentan-news.html
@@ -66,7 +66,7 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="Arsha/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/tentang-page.html">Tentang</a></li>
             <li class="dropdown">
               <a href="#services"
@@ -121,6 +121,221 @@
       >
         <div class="container">
           <div class="row">
+            <!-- Article 33 -->
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="article">
+                <a href="/articles/artikel32.html">
+                  <img src="assets/img/zaki2.jpg" alt="" class="img-fluid" />
+                  <h3>
+                    Sadarkan Pentingnya One Single Submission (OSS), Mahasiswa
+                    Fakultas Hukum KKN Tim II Universitas Diponegoro (UNDIP)
+                    Edukasi Pelaku UMKM di Desa Gentan
+                  </h3>
+                </a>
+                <hr />
+                <p>
+                  Sukoharjo (08/08/2024), Sosialisasi yang diselenggarakan oleh
+                  Mahasiswa KKN Tim II Universitas Diponegoro (UNDIP)
+                  berlangsung di Balai Desa Gentan. Penyuluhan mengenai Online
+                  Single Submission (OSS) bagi UMKM yang dilakukan oleh M. Zaki
+                  Zafran S.R (tengah) sekaligus Mahasiswa Fakultas Hukum.
+                </p>
+                <a href="/articles/artikel32.html" class="read-more"
+                  >Read More</a
+                >
+              </div>
+            </div>
+            <!-- Article 32 -->
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="article">
+                <a href="/articles/artikel31.html">
+                  <img src="assets/img/zaki1.jpg" alt="" class="img-fluid" />
+                  <h3>
+                    Uluran Tangan Mahasiswa Fakultas Hukum KKN Tim II
+                    Universitas Diponegoro (UNDIP) dalam Mendampingi Urus Surat
+                    Izin Mendirikan Bangunan (IMB) Lumbung Mart Desa Gentan
+                  </h3>
+                </a>
+                <hr />
+                <p>
+                  Sukoharjo (08/08/2024), Sebagai bagian dari upaya nyata dalam
+                  mendampingi Kelurahan Desa Gentan untuk proses administrasi
+                  pembuatan Surat Izin Mendirikan Bangunan (IMB), mahasiswa
+                  peserta Kuliah Kerja Nyata (KKN) Universitas Diponegoro
+                  (UNDIP) melaksanakan program pendampingan proses pembuatan
+                  Surat IMB pada bangunan milik Kelurahan Desa Gentan yaitu,
+                  Lumbung Mart. Program ini berfokus pada saat proses pembuatan
+                  Surat IMB berlangsung di kantor Kecamatan Baki, dengan tujuan
+                  Lumbung Mart mendapatkan surat izin yang sah atas dasar hukum
+                  sekaligus sebagai bangunan infrastruktur yang mendapatkan
+                  kepastian serta adanya perlindungan hukum.
+                </p>
+                <a href="/articles/artikel31.html" class="read-more"
+                  >Read More</a
+                >
+              </div>
+            </div>
+            <!-- Article 31 -->
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="article">
+                <a href="/articles/artikel30.html">
+                  <img
+                    src="assets/img/cristo2.jpg.png"
+                    alt=""
+                    class="img-fluid"
+                  />
+                  <h3>
+                    Sosialisasi Diagram Alir Proses IMB oleh KKN Tim II di Desa
+                    Gentan
+                  </h3>
+                </a>
+                <hr />
+                <p>
+                  Pada tanggal 8 Agustus 2024, KKN Tim II Universitas Diponegoro
+                  yang diwakili oleh Christophorus Septiar Anggraito, mahasiswa
+                  Hukum, mengadakan sosialisasi mengenai Izin Mendirikan
+                  Bangunan (IMB) di Desa Gentan. Sosialisasi ini berfokus pada
+                  pemahaman diagram alir yang menjelaskan syarat pendaftaran,
+                  cara pendaftaran, dan manfaat IMB bagi masyarakat setempat.
+                </p>
+                <a href="/articles/artikel30.html" class="read-more"
+                  >Read More</a
+                >
+              </div>
+            </div>
+            <!-- Article 30 -->
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="article">
+                <a href="/articles/artikel29.html">
+                  <img src="assets/img/cristo1.jpg" alt="" class="img-fluid" />
+                  <h3>Workshop PIRT bagi UMKM Desa Gentan</h3>
+                </a>
+                <hr />
+                <p>
+                  Pada tanggal 8 Agustus 2024, Desa Gentan menjadi tuan rumah
+                  untuk Workshop Pangan Industri Rumah Tangga (PIRT) yang
+                  diselenggarakan oleh Tim Kuliah Kerja Nyata (KKN) II
+                  Universitas Diponegoro. Workshop ini diwakili oleh
+                  Christophorus Septiar Anggraito, mahasiswa Hukum Universitas
+                  Diponegoro, yang bertujuan untuk memberikan pemahaman kepada
+                  pelaku Usaha Mikro, Kecil, dan Menengah (UMKM) di Desa Gentan
+                  tentang pentingnya sertifikasi PIRT.
+                </p>
+                <a href="/articles/artikel29.html" class="read-more"
+                  >Read More</a
+                >
+              </div>
+            </div>
+            <!-- Article 29 -->
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="article">
+                <a href="/articles/artikel28.html">
+                  <img src="assets/img/topan2.jpg" alt="" class="img-fluid" />
+                  <h3>
+                    Program KKN TIM II UNDIP Dorong Pemasaran UMKM Desa Gentan
+                    Melalui Website Desa
+                  </h3>
+                </a>
+                <hr />
+                <p>
+                  Sukoharjo (14/08/2024) - Pemasaran digital telah menjadi salah
+                  satu cara efektif untuk memperluas jangkauan dan meningkatkan
+                  penjualan bagi pelaku usaha mikro, kecil, dan menengah (UMKM).
+                  Dalam upaya mendukung UMKM di Desa Gentan agar lebih dikenal
+                  oleh masyarakat setempat dan meningkatkan eksposur mereka,
+                  program Kuliah Kerja Nyata (KKN) Tim II Universitas Diponegoro
+                  melaksanakan kegiatan pemasaran UMKM melalui website desa.
+                  Salah satu kegiatan utama dalam program ini adalah marketing
+                  UMKM di website desa, yang dipandu oleh Mohamad Taufan Akbar
+                  Fahrudin.
+                </p>
+                <a href="/articles/artikel28.html" class="read-more"
+                  >Read More</a
+                >
+              </div>
+            </div>
+            <!-- Article 28 -->
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="article">
+                <a href="/articles/artikel27.html">
+                  <img src="assets/img/topan1.jpg" alt="" class="img-fluid" />
+                  <h3>
+                    Program KKN TIM II UNDIP Dorong Modernisasi UMKM Melalui
+                    Implementasi QRIS di Desa Gentan
+                  </h3>
+                </a>
+                <hr />
+                <p>
+                  Sukoharjo (08/08/2024) - Modernisasi usaha mikro, kecil, dan
+                  menengah (UMKM) menjadi salah satu fokus utama dalam
+                  pembangunan ekonomi di Indonesia. Salah satu langkah konkret
+                  untuk mendukung modernisasi ini adalah melalui penerapan QRIS
+                  (Quick Response Code Indonesian Standard), yang mempermudah
+                  proses transaksi digital serta meningkatkan efisiensi
+                  pengelolaan keuangan. Dalam rangka mendukung tujuan tersebut,
+                  program Kuliah Kerja Nyata (KKN) Tim II Universitas Diponegoro
+                  melaksanakan kegiatan implementasi QRIS untuk UMKM di Desa
+                  Gentan.
+                </p>
+                <a href="/articles/artikel27.html" class="read-more"
+                  >Read More</a
+                >
+              </div>
+            </div>
+            <!-- Article 27 -->
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="article">
+                <a href="/articles/artikel26.html">
+                  <img src="assets/img/raffy3.jpg" alt="" class="img-fluid" />
+                  <h3>
+                    Sosialisasi "Inovatif Learning" dan Pemaparan Teori
+                    Psikologi Pendidikan di SD Negeri 2 Gentan: Meningkatkan
+                    Kualitas Pembelajaran dengan Memahami Karakteristik Siswa
+                  </h3>
+                </a>
+                <hr />
+                <p>
+                  Sukoharjo (25/7/2024), Bertempat di SD Negeri 2 Gentan, Desa
+                  Gentan, Kecamatan Baki, Kabupaten Sukoharjo, telah
+                  dilaksanakan sosialisasi mengenai Inovatif Learning bagi para
+                  guru. Kegiatan ini merupakan salah satu program kerja
+                  mahasiswa Fakultas Psikologi Universitas Diponegoro yang
+                  sedang menjalankan program Kuliah Kerja Nyata (KKN) di desa
+                  tersebut. Sosialisasi ini diikuti oleh seluruh guru SD Negeri
+                  2 Gentan dan bertujuan untuk memberikan wawasan baru mengenai
+                  metode pembelajaran yang kreatif dan efektif sesuai dengan
+                  karakteristik siswa.
+                </p>
+                <a href="/articles/artikel26.html" class="read-more"
+                  >Read More</a
+                >
+              </div>
+            </div>
+            <!-- Article 26 -->
+            <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
+              <div class="article">
+                <a href="/articles/artikel25.html">
+                  <img src="assets/img/raffy1.jpg" alt="" class="img-fluid" />
+                  <h3>
+                    Sosialisasi Pencegahan Bullying Sejak Dini di SD Negeri 2
+                    Gentan: Menciptakan Lingkungan Sekolah yang Aman dan Nyaman
+                  </h3>
+                </a>
+                <hr />
+                <p>
+                  Sukoharjo (25/7/2024) - Bullying yang terjadi sejak dini bisa
+                  berdampak serius pada perkembangan mental anak, seperti
+                  munculnya rasa rendah diri, ketakutan, atau bahkan trauma yang
+                  bisa memengaruhi masa depannya. Selain itu, anak-anak yang
+                  terbiasa melakukan tindakan bullying berpotensi membawa
+                  perilaku tersebut hingga dewasa, menciptakan siklus kekerasan
+                  yang sulit dihentikan.
+                </p>
+                <a href="/articles/artikel25.html" class="read-more"
+                  >Read More</a
+                >
+              </div>
+            </div>
             <!-- Article 25 -->
             <div class="col-lg-4" data-aos="fade-up" data-aos-delay="200">
               <div class="article">
