--- a/portfolio-details.html
+++ b/portfolio-details.html
@@ -50,7 +50,7 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="Arsha/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/tentang-page.html">Tentang</a></li>
             <li class="dropdown">
               <a href="#services"
@@ -80,7 +80,7 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted" href="Arsha/index.html">Get Started</a>
+        <a class="btn-getstarted" href="/index.html">Get Started</a>
       </div>
     </header>
 
