--- a/tentang-page.html
+++ b/tentang-page.html
@@ -41,7 +41,7 @@
 
       <nav id="navmenu" class="navmenu">
         <ul>
-          <li><a href="Arsha/index.html">Home</a></li>
+          <li><a href="/index.html">Home</a></li>
           <li><a href="/tentang-page.html">Tentang</a></li>
           <li class="dropdown">
             <a href="#services"
