--- a/umkm.html
+++ b/umkm.html
@@ -40,7 +40,7 @@
 
         <nav id="navmenu" class="navmenu">
           <ul>
-            <li><a href="Arsha/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="/tentang-page.html">Tentang</a></li>
             <li class="dropdown">
               <a href="#services"
@@ -70,7 +70,7 @@
           <i class="mobile-nav-toggle d-xl-none bi bi-list"></i>
         </nav>
 
-        <a class="btn-getstarted" href="Arsha/index.html">Get Started</a>
+        <a class="btn-getstarted" href="/index.html">Get Started</a>
       </div>
   </header>
 
